# easy-pagination

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  demo.py  pyproject.toml  pytest.ini  setup.py
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
easy_pagination/: pagination.py
easy_pagination/tests/: settings.py  test_pagination.py
tests/: __init__.py  test_pagination.py
